--- a/index.html.html
+++ b/index.html.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="C:\Users\dj_ya\Desktop\mi web\yasminabaraza\descargar CV\CV YASMINA BARAZA.pdf" class="button button--flex">
+                        <a download="" href="CV ES2025.docx" class="button button--flex">
                             Descargate mi CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
