--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
                 <div class="swiper-wrapper" id="swiper-wrapper-dbe82c1160332f4c" aria-live="polite">
                     <div class="portfolio__content grid swiper-slide swiper-slide-duplicate swiper-slide-prev"
                         data-swiper-slide-index="2" role="group" aria-label="1 / 5" style="width: 303px;">
-                        <img src="assets/img/p21.jpg" alt="" class="portfolio__img">
+                        <img src="foto.jpg" alt="" class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Windows SubSystem Linux (WSL)</h3>
                             <p class="portfolio__description">Ejecuta, gestiona y desarrolla <span
@@ -784,7 +784,7 @@
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide swiper-slide-active" data-swiper-slide-index="0"
                         role="group" aria-label="2 / 5" style="width: 303px;">
-                        <img src="assets/img/p22.jpg" alt="" class="portfolio__img">
+                        <img src="foto.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Script de Monitoreo</h3>
